[package]
name = "qiskit_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qiskit = { path = "../.." }  # Adjust the path to your Qiskit Rust core
pyo3 = { version = "0.22", features = ["extension-module"] }
